--- a/exercises/14-Todo-List/index.html
+++ b/exercises/14-Todo-List/index.html
@@ -12,7 +12,7 @@
 			<input id="addToDo" type="text" placeholder="Add to do here" />
 			<ul>
 				<li>
-					<span><i class="fa fa-trash"></i></span> Eat
+					<span><i class="fa fa-trash"></i></span> Bed
 				</li>
 				<li>
 					<span><i class="fa fa-trash"></i></span> Drink
